# test

./: README.md  pyproject.toml
baselines/: punkt_wrapper.py
configs/: default.yaml  spam.yaml
sample_data/: dev.csv  test.csv  train.conll  train.csv
src/senteg/: baseline.py  evaluator.py  features.py
src/sentseg/: __init__.py  baseline.py  classifier_models.py  classify_cli.py  cli.py  dataset.py  evaluator.py  trainer.py
src/sentseg/baselines/: crf_wrapper.py  none.py  pysbd_wrapper.py  regex.py  wtp_wrapper.py
src/sentseg/models/: crf_model.py  transformer.py
tests/: test_evaluator.py
